# Anthyre

./: .env.example  package-lock.json  package.json  test_server.rs  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: activity.rs  auth.rs  calendar.rs  daily_report.rs  lib.rs  llm.rs  main.rs
src-tauri/src/activity/: activitywatch.rs  calendar.rs  commands.rs  mod.rs  models.rs  processor.rs  summarize.rs  token.rs
src-tauri/src/database/: db.rs  mod.rs  schema.rs  seeder.rs
src/components/Header/: Header.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/SummaryPanel/: DailySummary.tsx  RealityCheck.tsx  Suggestions.tsx
src/components/ui/: calendar.tsx
src/layouts/: MainLayout.tsx
src/lib/: utils.ts
src/pages/Calendar/: Calendar.tsx
src/pages/Chat/: Chat.tsx
src/pages/Reports/: Reports.tsx
src/pages/Settings/: Settings.tsx
src/pages/Today/: Today.tsx
src/types/: auth.ts
