[package]
name = "anthyre"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "anthyre_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.29", features = ["bundled"] }
once_cell = "1.18"
dirs = "5.0"
google-calendar3 = "5.0.2+20240611" # Google Calendar API client
yup-oauth2 = "8.3.2"               # Handles OAuth tokens
tokio = { version = "1", features = ["full"] }
chrono = "0.4"                     # Datetime handling
dotenvy = "0.15"
urlencoding = "2.1"
webbrowser = "0.8"
